[package]
name = "test-runner"
version = "0.1.0"
edition = "2018"

[dependencies]
structopt = "0.3.21"
serde = { version = "1.0.26", features = ["derive"] }
serde_json = "1.0.59"
anyhow = "1.0.34"
rayon = "1.5.0"
itertools = "0.10.1"
mysql_async = "0.23"
tokio = { version = "0.2.25", features = ["full"] }
